# COMET

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.models.md  METRICS.md  MODELS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions-and-help.md  typos-and-doc-fixes.md
.github/workflows/: ci.yaml  github-actions.yaml  lint.yaml  python-package.yml
benchmarks/: README.md  wmt19_eval_bleurt.py  wmt_eval_baselines.py  wmt_eval_bertscore.py  wmt_eval_comet.py
comet/: __init__.py  cli.py  corpora.py  download_utils.py  logging.py  schedulers.py  trainer.py
comet/cli/: compare.py  mbr.py  score.py  train.py
comet/datasets/: __init__.py  regression.py  translation_ranking.py
comet/encoders/: __init__.py  base.py  bert.py  minilm.py  rembert.py  sparse_xlmr.py  xlmr.py  xlmr_xl.py
comet/metrics/: __init__.py  ranking_metrics.py  regression_metrics.py
comet/models/: __init__.py  base.py  download_utils.py  lru_cache.py  metrics.py  model_base.py  pooling_utils.py  predict_pbar.py  predict_writer.py  utils.py
comet/models/encoders/: __init__.py  bert.py  encoder_base.py  laser.py  xlmr.py
comet/models/estimators/: __init__.py  comet_estimator.py  estimator_base.py  metric_estimator.py  quality_estimator.py
comet/models/multitask/: unified_metric.py  xcomet_metric.py
comet/models/ranking/: __init__.py  comet_ranker.py  metric_ranker.py  ranking_base.py  ranking_metric.py  wmt_kendall.py
comet/models/regression/: referenceless.py  regression_metric.py
comet/modules/: __init__.py  activations.py  feedforward.py  layerwise_attention.py  scalar_mix.py
comet/tokenizers/: __init__.py  fastbpe_tokenizer.py  hf_tokenizer.py  tokenizer_base.py  xlmr_tokenizer.py
configs/: README.md  early_stopping.yaml  model_checkpoint.yaml  trainer.yaml  xlmr-da-ranker.yaml  xlmr-hter-estimator.yaml
configs/models/: ranking_metric.yaml  ranking_model.yaml  referenceless_metric.yaml  referenceless_model.yaml  regression_metric.yaml  regression_model.yaml  unified_metric.yaml
configs/xlmr/: estimator.yaml  example.yaml  ranker.yaml
configs/xlmr/base/: da-estimator.yaml  da-ranker.yaml  hter-estimator.yaml
configs/xlmr/large/: da-estimator.yaml  hter-estimator.yaml  qe-estimator.yaml
data/: README.md
docs/: README.md
docs/doctrees/: __library.doctree  environment.pickle  faqs.doctree  index.doctree  installation.doctree  library.doctree  models.doctree  running.doctree  training.doctree
docs/html/: .buildinfo  __library.html  faqs.html  genindex.html  index.html  installation.html  library.html  models.html  objects.inv  py-modindex.html  running.html  search.html  searchindex.js  training.html
docs/html/_modules/: index.html
docs/html/_sources/: __library.rst.txt  faqs.md.txt  index.rst.txt  installation.rst.txt  library.rst.txt  models.md.txt  running.rst.txt  training.md.txt
docs/source/: conf.py  faqs.md  index.rst  installation.rst  library.rst  models.md  running.rst  training.md
experiments/: README.md  diagnose_tensorboard.py
explainable-metrics/: explain_comet.py  explain_unite.py  utils.py
tests/data/: __init__.py  mt.de  multitask_data.csv  ranking_data.csv  ref.de  regression_data.csv  test_ranking_data.csv  test_regression_data.csv
tests/integration/models/: test_ranking_metric.py  test_referenceless_regression.py  test_regression_metric.py  test_unified_metric.py
tests/integration/modules/: test_feedforward.py
tests/sanity_checks/: testsuites.ipynb
tests/unit/: test_cache.py  test_corpora.py  test_download_load.py  test_download_utils.py  test_metrics.py  test_models_predict.py  test_schedulers.py
tests/unit/cli/: test_cli_download.py  test_cli_score.py
tests/unit/data/: __init__.py  src.en
tests/unit/encoders/: test_bert.py  test_laser.py  test_minilm.py  test_rembert.py  test_xlmr.py
tests/unit/models/: download.py  test_comet_estimator.py  test_download.py  test_qe_estimator.py  test_rank_model.py  test_utils.py
tests/unit/modules/: test_activations.py  test_feedforward.py
tests/unit/optimizers/: test_adam.py  test_adamax.py  test_adamw.py  test_radam.py
tests/unit/schedulers/: test_constant_lr.py  test_linear_warmup.py  test_warmup_constant.py
wmt-shared-task/: README.md
wmt-shared-task/document-level/: README.md  document_level.py
wmt-shared-task/segment-level/: README.md  segment_level_baselines.py  segment_level_bertscore.py  segment_level_bleurt.py  segment_level_comet.py  segment_level_prism.py
(+25 files in other folders)
